--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
@@ -61,8 +61,7 @@ access):</p>
         sites that are specified as part of the feature definitions</li>  
     </ul> 
   <li>Click <b>Search Now</b> to trigger the search. The search runs asynchronously,
-    so the workbench UI remain responsive. Search results are accummulated
-    in the Preview view, as well as being shown as children of the query object
+    so the workbench UI remain responsive. Search results are accumulated in the Preview view, as well as being shown as children of the query object
     in the Feature Updates view.</li>
   <li>To install one of the located features, select the feature in the
     search result list, or the Feature Updates view, and click the 
