--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
@@ -11,7 +11,7 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Changing the properties of a CVS Repository Location</H1>
 
-<P>You can change certain properties of an extisting repository location. 
+<P>You can change certain properties of an existing repository location. 
 The properties that can be changed are the connection method, user name 
 and password.
 </p>
