--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9f.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9f.htm
@@ -25,7 +25,7 @@ open the Debug perspective to debug a Java program.
   <li>Select the perspective that you want to open.</li>
 </ol>
 
-<p>When the perpective opens, the title bar of the window it is in changes to
+<p>When the perspective opens, the title bar of the window it is in changes to
 display the name of the perspective. In addition, an icon is added to the shortcut bar, 
 allowing you to quickly switch back to that perspective from other perspectives in the same
 window.
