--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
@@ -30,7 +30,7 @@ place when files are committed and checked out.
   <li>On the first page of the wizard, select the mode to be applied to the selected files: 
     <ul>
       <li><b>Automatic</b> - uses the file type to determine whether selected 
-        resources should use binary or the default ASCII mode (the deafult ASCII 
+        resources should use binary or the default ASCII mode (the default ASCII 
         mode is set on the Team > CVS preference page).</li>
       <li><b>Binary</b> - sets all selected files to binary. Files that are binary 
         are not altered in any way by CVS.</li>
@@ -43,7 +43,7 @@ place when files are committed and checked out.
     <p>Click <b>Next</b> to go to the next page.</p></li>
   <li>On the <b>Include versioned files</b> page of the wizard, indicate whether 
     files already shared in the repository are to be affected. If this setting 
-    is disabled, only files that have been added to cvs control but not committed 
+    is disabled, only files that have been added to CVS control but not committed 
     will be affected. This page will only appear if there are files already shared 
     with the repository. Click <b>Next</b> to go to the next page.</li>
   <li>On the <b>Include files with outgoing changes</b> page of the wizard, indicate 
