--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-team-1.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-team-1.htm
@@ -36,7 +36,7 @@
       the file extension in the text prompt that appears. Once <b>OK</b> is clicked, 
       the extension will be added to the list with a content type of ASCII.
   </li>
-  <li>To change the content type for an existing file extenson, select the file 
+  <li>To change the content type for an existing file extension, select the file 
     extension entry and click the <b>Change</b> button. This will toggle the type 
     from ASCII to Binary or vice versa.</li>
   <li>To remove a file extension, select the file extension entry and click the 
