--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -12,7 +12,7 @@
 <H1>Branches</H1>
 
 <p>In CVS, teams share and integrate their ongoing work in <i>branches</i>. Think 
-  of a banch as a shared work area that can be updated at any time by team members. 
+  of a branch as a shared work area that can be updated at any time by team members. 
   In this way, individuals can work on a team project, share their work with others 
   on the team, and access the work of others during all stages of the project. 
   The branch effectively represents the current shared state of the project. 
