first doc pass, tidy

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -13,13 +13,12 @@
       Classpath variables
     </h1>
     <p>
-      In addition to projects and JARs the build path of a Java project can also contain variables.
-      These variables are called class path variables and can point to a JAR file.
+      In addition to projects and JARs the build path of a Java project can also contain variables. These variables are called class path variables and can point to a JAR file.
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="concepts-1.htm">Java development tools (JDT)</a><br>
-      <a href="cbuildcp.htm">Build classpath</a>
+       <a href="concepts-1.htm">Java development tools (JDT)</a><br>
+       <a href="cbuildcp.htm">Build classpath</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
@@ -29,9 +28,9 @@
        <a href="../tasks/tasks-118.htm">Deleting a classpath variable</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
-      <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
-      <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+       <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
+       <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
