--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -42,24 +42,24 @@
       </li>
     </ul>
     <p>
-      <span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class="control">Show
-      Source of Selected Element Only</span>.</span>
+      <span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class=
+      "control">Show Source of Selected Element Only</span>.</span>
     </p>
     <p>
       By default, this editor is activated by either:
     </p>
     <ul>
       <li>
-        <span>selecting <span class="control">Open With</span> &gt; <span class="control">Java Editor</span> from a selection&#39;s pop-up menu in the Navigator view, Package Explorer view or Types
-        view</span>
+        <span>selecting <span class="control">Open With</span> &gt; <span class="control">Java Editor</span> from a selection&#39;s pop-up menu in the Navigator view, Package
+        Explorer view or Types view</span>
       </li>
       <li>
-        clicking a Java file in the Navigator or Package Explorer (see the <span class="control">&nbsp;Window &gt; Preferences &gt; Workbench</span> preference page to choose between single
-        and double click modes)
+        clicking a Java file in the Navigator or Package Explorer (see the <span class="control">&nbsp;Window &gt; Preferences &gt; Workbench</span> preference page to choose
+        between single and double click modes)
       </li>
       <li>
-        clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control">&nbsp;Window &gt; Preferences &gt;
-        Workbench</span> preference page to choose between single and double click modes)
+        clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control">&nbsp;Window &gt;
+        Preferences &gt; Workbench</span> preference page to choose between single and double click modes)
       </li>
       <li>
         <span>single-clicking a currently-open Java file in the Navigator view or Package Explorer view.</span>
@@ -68,17 +68,17 @@
         single-clicking a Java type, method or field, with its compilation unit currently open, in &nbsp;the Package Explorer view, Types view, Members view or Type Hierarchy view
       </li>
       <li>
-        <span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package Explorer
-        view.</span>
+        <span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package
+        Explorer view.</span>
       </li>
     </ul>
     <p>
       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-      <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
+       <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
        <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
        <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
        <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
@@ -91,7 +91,7 @@
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
-      <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
+       <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
        <a href="../reference/ref-21.htm">Java editor preferences</a><br>
        <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
        <a href="../reference/ref-24.htm">Views and editors</a>
