--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -19,7 +19,7 @@
     <p>
       The following searches can be conducted from the pop-up menus of Java elements:
     </p>
-    <table border="1" cellspacing="0" cellpadding="0">
+    <table border="1" cellspacing="0" cellpadding="0" summary="Java search actions">
       <thead>
         <tr>
           <td>
@@ -111,16 +111,16 @@
     </p>
     <p>
       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-      <a href="../tasks/tasks-79.htm">Searching Java code</a>
+       <a href="../tasks/tasks-79.htm">Searching Java code</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>        
-      <a href="../reference/ref-menu-search.htm">Search actions</a><br>
-      <a href="../reference/ref-131.htm">Java Search tab</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+       <a href="../reference/ref-menu-search.htm">Search actions</a><br>
+       <a href="../reference/ref-131.htm">Java Search tab</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
