--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -18,8 +18,8 @@
     <p>
       Problems detected by the compiler are classified as either warnings or errors. The existence of a warning does not affect the execution of the program; the code executes as
       if it were written correctly. Compile-time errors (as specified by the Java Language Specification) are always reported as errors by the Java compiler. For some other types
-      of problems you can, however, specify if you want the Java compiler to report them as warnings, errors or to ignore them. To change the default settings, use the
-      <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler</span> preference page.
+      of problems you can, however, specify if you want the Java compiler to report them as warnings, errors or to ignore them. To change the default settings, use the <span
+      class="control">Window &gt; Preferences &gt; Java &gt; Compiler</span> preference page.
     </p>
     <p>
       The Java compiler can create CLASS files even in presence of compilation errors. However, in the case of serious errors (for example, references to inconsistent binaries,
@@ -27,12 +27,12 @@
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="cbuildcp.htm">Build classpath</a><br>
+       <a href="cbuildcp.htm">Build classpath</a><br>
        <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-      <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
+       <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
        <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
        <a href="../tasks/tasks-108.htm">Building automatically</a><br>
@@ -42,9 +42,9 @@
        <a href="../tasks/tasks-110.htm">Working with build paths</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
-      <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
-      <a href="../reference/ref-preferences-compiler.htm">Java Compiler preferences</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+       <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
+       <a href="../reference/ref-preferences-compiler.htm">Java Compiler preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
