first doc pass, tidy

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-183.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-183.htm
@@ -1,13 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Showing and hiding empty packages</title>
+    <title>
+      Showing and hiding empty packages
+    </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
   <body>
-    <h1>Showing and hiding empty packages</h1>
+    <h1>
+      Showing and hiding empty packages
+    </h1>
     <p>
       To show empty packages:
     </p>
@@ -20,7 +24,7 @@
       </li>
     </ol>
     <p>
-      To hide empty packages: 
+      To hide empty packages:
     </p>
     <ol>
       <li>
@@ -32,8 +36,8 @@
     </ol>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-2.htm">Showing and hiding elements</a><br>
-      <a href="tasks-47.htm">Filtering elements</a>
+       <a href="tasks-2.htm">Showing and hiding elements</a><br>
+       <a href="tasks-47.htm">Filtering elements</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
