--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -14,59 +14,60 @@
     </h1>
     <img src="../images/tasks-190a.gif" alt="Externalize Strings Property File page"> 
     <p>
-       Externalize Strings Property File page
+      Externalize Strings Property File page
     </p>
     <ol>
       <li>
-        In the <span class="control">Package</span> field, enter the name fo the package in which you want the wizard to locate the property file (you can use the <span class="control">Browse</span>
-        button to display the list of all packages)
+        In the <span class="control">Package</span> field, enter the name fo the package in which you want the wizard to locate the property file (you can use the <span class=
+        "control">Browse</span> button to display the list of all packages)
       </li>
       <li>
-        In the Property file name field, enter the name of the property file (new or existing) in which the externalized strings will be put (you can use the
-        <span class="control">Browse</span> button to display the list of all .properties files located in the package selected in the Package field.)
+        In the Property file name field, enter the name of the property file (new or existing) in which the externalized strings will be put (you can use the <span class=
+        "control">Browse</span> button to display the list of all .properties files located in the package selected in the Package field.)
       </li>
       <li>
-        Select the <span class="control">Create resource bundle accessor class</span> checkbox if you want to create a class that will be used to access the externalized strings (Note: the
-        class will be reused if it exists already).
+        Select the <span class="control">Create resource bundle accessor class</span> checkbox if you want to create a class that will be used to access the externalized strings
+        (Note: the class will be reused if it exists already).
       </li>
       <li>
         In the <span class="control">Class name</span> field, if you have the above-mentioned checkbox selected, you can specify the name of the accessor class
       </li>
       <li>
-        Press <span class="control">Next</span> to see a preview of the modifications or press <span class="control">Finish</span> to externalize strings without previewing changes.
+        Press <span class="control">Next</span> to see a preview of the modifications or press <span class="control">Finish</span> to externalize strings without previewing
+        changes.
       </li>
     </ol>
     <p class="Note">
-    Note: The default behavior of the wizard (i.e. creating a class with a name specified in the <span class="control">Class name field</span> and using
-    <span class="control">getString</span> as the name of the method used to retrieve strings from the property file) can be overridden. You may want to do so if you already have an accessor
-    class in another package or your accessor class uses another method with another name to get strings from the property file. 
+      Note: The default behavior of the wizard (i.e. creating a class with a name specified in the <span class="control">Class name field</span> and using <span class=
+      "control">getString</span> as the name of the method used to retrieve strings from the property file) can be overridden. You may want to do so if you already have an
+      accessor class in another package or your accessor class uses another method with another name to get strings from the property file.
     </p>
     <ol>
       <li>
         Clear the <span class="control">Use default substitution pattern</span> checkbox
       </li>
       <li>
-        In the <span class="control">Substitution pattern</span> field enter the new pattern that will be used to retrieve strings from the property file. For each externalized string, the
-        first occurrence of <span class="control">${key}</span> will be substituted with the key.
+        In the <span class="control">Substitution pattern</span> field enter the new pattern that will be used to retrieve strings from the property file. For each externalized
+        string, the first occurrence of <span class="control">${key}</span> will be substituted with the key.
       </li>
       <li>
-        Use the <span class="control">Add import declaration</span> field if you want the wizard to add an additional import to the compilation unit (you can use the <span class="control">Browse</span>
-        button to help you find a class that you want to import.)
+        Use the <span class="control">Add import declaration</span> field if you want the wizard to add an additional import to the compilation unit (you can use the <span class=
+        "control">Browse</span> button to help you find a class that you want to import.)
       </li>
     </ol>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-206.htm">Externalizing Strings</a><br>
-      <a href="tasks-180.htm">Using the Externalize Strings wizard</a><br>
-      <a href="tasks-189.htm">Key/value page</a><br>
-      <a href="tasks-100.htm">Undoing a refactoring operation</a><br>
-      <a href="tasks-101.htm">Redoing a refactoring operation</a><br>
-      <a href="tasks-82.htm">Refactoring with preview</a><br>
-      <a href="tasks-83.htm">Refactoring without preview</a><a href="tasks-83.htm"></a><br>
+       <a href="tasks-206.htm">Externalizing Strings</a><br>
+       <a href="tasks-180.htm">Using the Externalize Strings wizard</a><br>
+       <a href="tasks-189.htm">Key/value page</a><br>
+       <a href="tasks-100.htm">Undoing a refactoring operation</a><br>
+       <a href="tasks-101.htm">Redoing a refactoring operation</a><br>
+       <a href="tasks-82.htm">Refactoring with preview</a><br>
+       <a href="tasks-83.htm">Refactoring without preview</a><a href="tasks-83.htm"></a><br>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-      <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
+       <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
