--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -13,7 +13,7 @@
       Showing full or compressed package names
     </h1>
     <p>
-      Package Explorer and Packages views can show full or compressed package names. 
+      Package Explorer and Packages views can show full or compressed package names.
     </p>
     <p>
       To show full package names:
@@ -30,21 +30,20 @@
           Select the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox.
         </p>
         <p>
-          A compression pattern can contain a
-          digit (n), which represents the first n characters of a package name segment.<br>
-           The compression pattern is not used if the resulting name is longer than the original package name. For example, using a pattern <span class="control">3~.</span> on a package named
-          <span class="control">org.eclipse.jdt</span> results in <span class="control">org.ecl~.jdt</span>
+          A compression pattern can contain a digit (n), which represents the first n characters of a package name segment.<br>
+           The compression pattern is not used if the resulting name is longer than the original package name. For example, using a pattern <span class="control">3~.</span> on a
+          package named <span class="control">org.eclipse.jdt</span> results in <span class="control">org.ecl~.jdt</span>
         </p>
       </li>
     </ul>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> <br>
-      <a href="../reference/ref-preferences-appearance.htm">Java Appearance preference page</a> 
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+       <a href="../reference/ref-preferences-appearance.htm">Java Appearance preference page</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-      <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
-      <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
+       <a href="../reference/ref-preferences-appearance.htm">Appearance preference page</a><br>
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
