--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
@@ -20,7 +20,8 @@
         Go to <span class="control">Window &gt; Preferences &gt; Java &gt; Templates</span> and press the <span class="control">New</span> button.
       </li>
       <li>
-        In the <span class="control">Name</span> field, enter the name for the template. This name need not be unique. It is used for selecting templates from the Code Assist list.
+        In the <span class="control">Name</span> field, enter the name for the template. This name need not be unique. It is used for selecting templates from the Code Assist
+        list.
       </li>
       <li>
         Specify the context for the template using the <span class="control">Context</span> combo-box: 
@@ -44,8 +45,8 @@
         <code>${variable_name}</code>. 
         <ul>
           <li>
-            To insert a pre-defined template variable, use the <span class="control">Insert Variable</span> button or press <kbd>Ctrl+Space</kbd> and select the variable from the presented
-            list.
+            To insert a pre-defined template variable, use the <span class="control">Insert Variable</span> button or press <kbd>Ctrl+Space</kbd> and select the variable from the
+            presented list.
           </li>
           <li>
             You can insert your own template variables, which then evaluate to the name of the variable itself. You must, however, make sure that the name does not conflict with
@@ -59,16 +60,16 @@
     </ul>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="../concepts/ctemplates.htm">Templates</a>
+       <a href="../concepts/ctemplates.htm">Templates</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-      <a href="tasks-54.htm">Using the Java editor</a><br>
+       <a href="tasks-54.htm">Using the Java editor</a><br>
        <a href="tasks-171.htm">Using templates</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
-      <a href="../reference/ref-preferences-templates.htm">Template preference page</a>
+       <a href="../reference/ref-preferences-templates.htm">Template preference page</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
