--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -12,7 +12,7 @@
       Creating JUnit tests
     </h1>
     <p>
-      To develop JUnit tests follow these steps to set-up your project: 
+      To develop JUnit tests follow these steps to set-up your project:
     </p>
     <ol>
       <li>
@@ -56,28 +56,28 @@
         <p>
           Press <span class="control">Next</span>
         </p>
-        
         <p>
           <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1">
         </p>
       </li>
       <li>
-        In the <span class="control">Source Folder</span> field, enter the name of the source folder in which your test will be created. You can use the <span class="control">Browse</span> button and
-        select the source folder from the resulting dialog.
+        In the <span class="control">Source Folder</span> field, enter the name of the source folder in which your test will be created. You can use the <span class=
+        "control">Browse</span> button and select the source folder from the resulting dialog.
       </li>
       <li>
-        In the <span class="control">Package</span> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use the
-        <span class="control">Browse</span> button and select the package from the resulting dialog.
+        In the <span class="control">Package</span> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use
+        the <span class="control">Browse</span> button and select the package from the resulting dialog.
       </li>
       <li>
         In the <span class="control">Test case</span> field, enter the name for the test you are creating.
       </li>
       <li>
-        In the <span class="control">Test class</span>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow you to create
-        test methods for public method in the selected class.
+        In the <span class="control">Test class</span>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow you
+        to create test methods for public method in the selected class.
       </li>
       <li>
-        In the <span class="control">Superclass</span> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code> interface).
+        In the <span class="control">Superclass</span> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code>
+        interface).
       </li>
       <li>
         Use the checkboxes to select the methods that you want to create in the test.
@@ -87,7 +87,7 @@
       </li>
       <li>
         <p>
-          If you entered the name of the class to be tested, then: 
+          If you entered the name of the class to be tested, then:
         </p>
         <ul>
           <li>
@@ -97,7 +97,7 @@
             press <span class="control">Next</span> to select the public methods that you want to test
           </li>
         </ul>
-        <p>        
+        <p>
           <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2">
         </p>
       </li>
@@ -113,11 +113,11 @@
     </ol>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-207.htm">Using JUnit</a> 
+       <a href="tasks-207.htm">Using JUnit</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-      <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
+       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
