--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
@@ -39,9 +39,8 @@
         <p>
           Press <span class="control">Next</span>
         </p>
-        
         <p>
-         <img src="../images/tasks-209a.gif" alt="TestSuite creation wizard">
+          <img src="../images/tasks-209a.gif" alt="TestSuite creation wizard">
         </p>
       </li>
       <li>
@@ -72,16 +71,16 @@
       </li>
     </ul>
     <p>
-      Note: the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> and <code>//$JUnit-END$</code>) into the created Test suite class, which allows the
-      wizard to update existing test suite classes. It is recommended not to edit code that lies between the markers.
+      Note: the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> and <code>//$JUnit-END$</code>) into the created Test suite class, which allows the wizard to update
+      existing test suite classes. It is recommended not to edit code that lies between the markers.
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a> 
+       <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-      <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
+       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
