--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -22,26 +22,27 @@
         Set a breakpoint at the beginning of the test method.
       </li>
       <li>
-        Select the test case and execute <span class="control">Run &gt; Debug as &gt; JUnit Test</span> from the menu bar or simply execute the test case from the launch history in the
-        <span class="control">Debug</span> toolbar button drop down menu.
+        Select the test case and execute <span class="control">Run &gt; Debug as &gt; JUnit Test</span> from the menu bar or simply execute the test case from the launch history
+        in the <span class="control">Debug</span> toolbar button drop down menu.
       </li>
       <li>
         <p>
-        If you have the &quot;keep alive&quot; preference option set and your target VM supports hot code replacement you can fix the code and rerun the test without restarting
-        the full test run.</p>
-        
+          If you have the &quot;keep alive&quot; preference option set and your target VM supports hot code replacement you can fix the code and rerun the test without restarting
+          the full test run.
+        </p>
         <p>
-        Note: to set the preference, open the Launch configuration dialog, select the launch configuration for your test and select the <span class="control">Keep JUnit running after a test
-        run when debugging</span> checkbox.</p>
+          Note: to set the preference, open the Launch configuration dialog, select the launch configuration for your test and select the <span class="control">Keep JUnit running
+          after a test run when debugging</span> checkbox.
+        </p>
       </li>
     </ol>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-      <a href="tasks-207.htm">Using JUnit</a>
+       <a href="tasks-207.htm">Using JUnit</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-      <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
+       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
