--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -1,13 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Using the Find/Replace dialog</title>
+    <title>
+      Using the Find/Replace dialog
+    </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
   <body>
-    <h1>Using the Find/Replace dialog</h1>
+    <h1>
+      Using the Find/Replace dialog
+    </h1>
     <p>
       To open the Find / Replace dialog:
     </p>
@@ -53,16 +57,16 @@
             Select the <span class="control">Case Sensitive</span> checkbox if you want finding to be case sensitive.
           </li>
           <li>
-            Select the <span class="control">Whole Word</span> checkbox if you want to find / replace only those occurrences in which the text you entered in
-            the <span class="control">Find</span> field is a whole word
+            Select the <span class="control">Whole Word</span> checkbox if you want to find / replace only those occurrences in which the text you entered in the <span class=
+            "control">Find</span> field is a whole word
           </li>
           <li>
-            Select the <span class="control">Wrap Search</span> checkbox if you want the dialog to continue from the top of the file once the bottom is reached (if you find / replace in
-            Selected Lines only, then this option applies to those lines only)
+            Select the <span class="control">Wrap Search</span> checkbox if you want the dialog to continue from the top of the file once the bottom is reached (if you find /
+            replace in Selected Lines only, then this option applies to those lines only)
           </li>
           <li>
-            Select the <span class="control">Incremental</span> checkbox if you want to perform incremental find (e.g. the dialog will find matching occurrences while you are typing in
-            the Find field)
+            Select the <span class="control">Incremental</span> checkbox if you want to perform incremental find (e.g. the dialog will find matching occurrences while you are
+            typing in the Find field)
           </li>
         </ul>
       </li>
@@ -89,13 +93,12 @@
     </ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-     <a href="../concepts/concepts-7.htm">Java editor</a><br>
+       <a href="../concepts/concepts-7.htm">Java editor</a><br>
     </p>
-       
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
        <a href="tasks-54.htm">Using the Java editor</a><br>
-      <a href="tasks-173.htm">Finding and replacing</a><a href="tasks-173.htm"></a>
+       <a href="tasks-173.htm">Finding and replacing</a><a href="tasks-173.htm"></a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
@@ -104,7 +107,6 @@
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
       "324"></a><br>
-        
     </p>
   </body>
 </html>
