--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -1,13 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Using Incremental Find</title>
+    <title>
+      Using Incremental Find
+    </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
   </head>
   <body>
-    <h1>Using Incremental Find</h1>
+    <h1>
+      Using Incremental Find
+    </h1>
     <p>
       To use Incremental Find:
     </p>
@@ -33,17 +37,17 @@
     </ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-      <a href="../concepts/concepts-7.htm">Java editor</a> 
+       <a href="../concepts/concepts-7.htm">Java editor</a>
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
        <a href="tasks-54.htm">Using the Java editor</a><br>
-      <a href="tasks-173.htm">Finding and Replacing</a><br>
-      <a href="tasks-187.htm">Finding Next or Previous Match</a>
+       <a href="tasks-173.htm">Finding and Replacing</a><br>
+       <a href="tasks-187.htm">Finding Next or Previous Match</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-edit.htm">Edit menu</a><br>        
+       <a href="../reference/ref-menu-edit.htm">Edit menu</a><br>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width=
