--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
@@ -1,7 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Showing and hiding empty parent packages</title>
+    <title>
+      Showing and hiding empty parent packages
+    </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
@@ -11,7 +13,7 @@
       Showing and hiding empty parent packages
     </h1>
     <p>
-      To show empty parent packages: 
+      To show empty parent packages:
     </p>
     <ol>
       <li>
@@ -42,8 +44,8 @@
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-2.htm">Showing and hiding elements</a><br>
-      <a href="tasks-47.htm">Filtering elements</a> 
+       <a href="tasks-2.htm">Showing and hiding elements</a><br>
+       <a href="tasks-47.htm">Filtering elements</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
