--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
@@ -21,21 +21,22 @@
         In the&nbsp;<span class="control"><span class="control">Enter new name</span></span> field, type a new name for the local variable.
       </li>
       <li>
-        If you do not want to update references to the renamed local variable, deselect the&nbsp;<span class="control"><span class="control">Update references to the renamed element</span></span>
-        checkbox.
+        If you do not want to update references to the renamed local variable, deselect the&nbsp;<span class="control"><span class="control">Update references to the renamed
+        element</span></span> checkbox.
       </li>
       <li>
-        Click <span class="control"><span class="control">Next</span></span> to perform a quick refactoring, or click&nbsp;<span class="control"><span class="control">Finish</span></span> to perform a controlled refactoring.
+        Click <span class="control"><span class="control">Next</span></span> to perform a quick refactoring, or click&nbsp;<span class="control"><span class=
+        "control">Finish</span></span> to perform a controlled refactoring.
       </li>
     </ul>
     <p>
-        <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-        <a href="tasks-204.htm">Renaming a local variable</a><br>
-        <a href="tasks-82.htm">See Refactoring without Preview</a><br>
-        <a href="tasks-83.htm">See Refactoring with Preview</a><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+       <a href="tasks-204.htm">Renaming a local variable</a><br>
+       <a href="tasks-82.htm">See Refactoring without Preview</a><br>
+       <a href="tasks-83.htm">See Refactoring with Preview</a><br>
     </p>
     <p>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
