first doc pass, tidy

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -58,7 +58,7 @@
        <a href="../reference/ref-154.htm">Extract Method Errors</a><br>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
