--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
@@ -18,10 +18,10 @@
     </p>
     <ul>
       <li>
-        In the&nbsp;<span class="control"><span class="control">Enter new name</span></span> field, type a new name for the local variable.
+        In the <span class="control"><span class="control">Enter new name</span></span> field, type a new name for the local variable.
       </li>
       <li>
-        If you do not want to update references to the renamed local variable, deselect the&nbsp;<span class="control"><span class="control">Update references to the renamed
+        If you do not want to update references to the renamed local variable, deselect the <span class="control"><span class="control">Update references to the renamed
         element</span></span> checkbox.
       </li>
       <li>
