--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -54,18 +54,18 @@
         Explorer view or Types view</span>
       </li>
       <li>
-        clicking a Java file in the Navigator or Package Explorer (see the <span class="control">&nbsp;Window &gt; Preferences &gt; Workbench</span> preference page to choose
+        clicking a Java file in the Navigator or Package Explorer (see the <span class="control"> Window &gt; Preferences &gt; Workbench</span> preference page to choose
         between single and double click modes)
       </li>
       <li>
-        clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control">&nbsp;Window &gt;
+        clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control"> Window &gt;
         Preferences &gt; Workbench</span> preference page to choose between single and double click modes)
       </li>
       <li>
         <span>single-clicking a currently-open Java file in the Navigator view or Package Explorer view.</span>
       </li>
       <li>
-        single-clicking a Java type, method or field, with its compilation unit currently open, in &nbsp;the Package Explorer view, Types view, Members view or Type Hierarchy view
+        single-clicking a Java type, method or field, with its compilation unit currently open, in the Package Explorer view, Types view, Members view or Type Hierarchy view
       </li>
       <li>
         <span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package
